# arborist

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  git.rs  main.rs  meta.rs
src/commands/: clean.rs  go.rs  list.rs  mod.rs  new.rs  rm.rs  status.rs  tag.rs
tests/: test_clean.rs  test_list.rs  test_new.rs  test_rm.rs  test_status.rs  test_tag.rs
tests/common/: mod.rs
