[package]
name = "arborist"
version = "0.1.0"
edition = "2024"
description = "Git worktree manager for AI-driven development workflows"
license = "MIT"
repository = "https://github.com/onigiri0418/arborist"

[[bin]]
name = "arborist"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Git integration
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Interactive prompts
inquire = "0.7"

# Color output
owo-colors = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
